# python-url-shortener

./: .env_example  .env_test  .gitignore  README.md  makefile  pyproject.toml
app/: env.py  main.py
app/url_shortener/: id_generator.py  url_shortener.py  url_storage.py  utils.py  validators.py
static/: index.html
tests/: shared.py  test_id_generator.py  test_sanic_api.py  test_url_shortener.py  test_url_storage.py  test_validators.py
